--- a/src/main/resources/templates/WebKhachHang/list-category.html
+++ b/src/main/resources/templates/WebKhachHang/list-category.html
@@ -1206,7 +1206,7 @@
     chatMessages.scrollTop = chatMessages.scrollHeight;
 
     try {
-      const res = await fetch('https://longpdth01286.app.n8n.cloud/webhook/website-chatbot', {
+      const res = await fetch('https://duclong206.app.n8n.cloud/webhook/website-chatbot', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({ body: { from: 'user_123', message } })
