--- a/src/main/resources/templates/WebKhachHang/chitietsanpham.html
+++ b/src/main/resources/templates/WebKhachHang/chitietsanpham.html
@@ -1194,7 +1194,7 @@
         chatMessages.scrollTop = chatMessages.scrollHeight;
 
         try {
-            const response = await fetch('https://longpdth01286.app.n8n.cloud/webhook/website-chatbot', {
+            const response = await fetch('https://duclong206.app.n8n.cloud/webhook/website-chatbot', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify({ body: { from: 'user_123', message } })
